k8s-deploy/prod_monitoring/grafana_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana
  labels:
    app: grafana
spec:
  ports:
    - port: 3000
      protocol: TCP
      targetPort: http-grafana
  selector:
    app: grafana
  type: NodePort


# kubectl port-forward svc/grafana 3000


# apiVersion: v1
# kind: Service
# metadata:
#   name: grafana
# spec:
#   ports:
#     - port: 3000
#       protocol: TCP
#       targetPort: http-grafana
#   selector:
#     app: grafana
#   sessionAffinity: None
#   type: LoadBalancer
