k8s-deploy/prod_monitoring/prometheus_frontend.yaml
# this is a frontend, but also acts as a proxy for graphana
# port-forward svc/frontend 9090

# https://raw.githubusercontent.com/GoogleCloudPlatform/prometheus-engine/v0.5.0/examples/frontend.yaml 


# Copyright 2022 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https:#www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: apps/v1
kind: Deployment
metadata:
  name: prom-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prom-frontend
  template:
    metadata:
      labels:
        app: prom-frontend
    spec:
      automountServiceAccountToken: true
      nodeSelector:
        kubernetes.io/os: linux
        kubernetes.io/arch: amd64
      containers:
      - name: prom-frontend
        image: "gke.gcr.io/prometheus-engine/frontend:v0.5.0-gke.0"
        args:
        - "--web.listen-address=:9090"
        - "--query.project-id=umuzi-prod"   # Change for prod. Everything else is the same
        ports:
        - name: web
          containerPort: 9090
        readinessProbe:
          httpGet:
            path: /-/ready
            port: web
        livenessProbe:
          httpGet:
            path: /-/healthy
            port: web
---
apiVersion: v1
kind: Service
metadata:
  name: prom-frontend
spec:
  clusterIP: None
  selector:
    app: prom-frontend
  ports:
  - name: web
    port: 9090



# kubectl port-forward svc/prom-frontend 9090
