k8s-deploy/prod_monitoring/grafana_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: grafana-ip-prod
    networking.gke.io/managed-certificates: grafana-managed-cert
    kubernetes.io/ingress.class: "gce"
  labels:
    app: grafana
spec:
  defaultBackend:
    service:
      name: grafana
      port:
        number: 3000


# gcloud compute addresses create grafana-ip-prod --global --project umuzi-prod
# gcloud compute addresses describe grafana-ip-prod --global --project umuzi-prod
